--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -1,6 +1,6 @@
 body {
   font-family: Arial, sans-serif;
-  background-color: #f4f4f4;
+  background-color: black;
   margin: 0;
   padding: 0;
   /* display: flex; */
@@ -22,7 +22,7 @@ h1 {
   max-width: 1200px;
   margin: auto;
   padding: 20px;
-  background-color: #fff;
+  background-color: #black;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
   border-radius: 8px;
 }
